llvm/dev/intcallcallerexpr.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/intcallcallerexpr.llvm:10:1: error: expected instruction opcode
}
^
